--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-form-field appearance="standard">
   <mat-label>Filter Table</mat-label>
-  <input matInput placeholder="search here" (keyup)="applyFilter($event" />
+  <input matInput placeholder="search here" (keyup)="applyFilter($event)" />
 </mat-form-field>
 
 <div>
